2009-03-18  Marko Kohtala  <marko.kohtala@gmail.com>
  * Fix gpdasm inhx32 reading bug. Thanks to Peter Keller.

2009-03-13  David Barnett  <daviebdawg@gmail.com>
  * gputils-0.13.7 released

2009-03-13  David Barnett  <daviebdawg@gmail.com>
  * Minor signed/unsigned cleanups from bug #2556391.

2009-03-12  Marko Kohtala  <marko.kohtala@gmail.com>
  * Add LIST M=??? support for EEPROM8.

2009-03-10  Marko Kohtala  <marko.kohtala@gmail.com>
  * configure script updated to only test for what is used. Fixes
  compilation problems due to unresolved rpl_malloc and others.
  * Some includes of stdlib.h and string.h fixed to take advice from
  configure.

2009-02-09  Marko Kohtala  <marko.kohtala@gmail.com>
  * gpasm/parse.y: Move use of token symbols after definition. This
  is needed to compile with bison 1.4.1.
  * gpasm/Makefile.am, gplink/Makefile.am: Separate AM_YFLAGS -d
  option to enable automake magic to make EXTRA_DIST and
  MAINTAINERCLEANFILES unnecessary. Use BUILT_SOURCES to have parse.h
  available for include in other files (namely gpasm/directive.c).

2009-02-06  Marko Kohtala  <marko.kohtala@gmail.com>
  * Synchronized device support with MPLAB IDE 8.20. Updated 82
  devices. For some devices object files compiled with previous
  version will not link against object files from this version due
  to coff file type changes and memory size changes. Coff file type
  changed on pic12f508, pic12f509, pic12f635, pic12f683, pic16f505,
  pic16f54, pic16f57, pic16f59, pic16f610, pic16f636, pic16f639,
  pic16f716, pic16f737, pic16f767, pic16f777, pic16f785, pic16f84,
  pic16f84a, pic16f913, pic16f914, pic16f916, pic16f917, pic18f1230,
  pic18f1330, pic18f2610, pic18f2620, pic18f26k20, pic18f4610,
  pic18f4620, pic18f6310, pic18f6390, pic18f6410, pic18f6490,
  pic18f6627, pic18f66j60, pic18f66j65, pic18f6722, pic18f67j60,
  pic18f8627, pic18f86j60, pic18f86j65, pic18f87j60, pic18f96j60,
  pic18f96j65, pic18f97j60.  Memory sizes fixed to match MPASM v5.30